@@ -1,6 +1,7 @@
 2010-06-19 Homer Xing <homer.xing@gmail.com>
 
     * Improve clean up pane. Reduce space cost.
+    * If the server has not been detected, then show nothing.
 
 2010-06-19 MA Yue <velly.empire@gmail.com>
 
